--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.0
 Django==4.1
 idna==3.3
 Pillow==9.2.0
+psycopg2-binary==2.9.3
 pytz==2022.2.1
 requests==2.28.1
 sqlparse==0.4.2
