--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,11 @@ sqlparse==0.4.2
 urllib3==1.26.11
 whitenoise==6.2.0
 gunicorn==20.1.0
+asgiref==3.6.0
+boto3==1.26.64
+botocore==1.29.89
+cached-property==1.5.1
+django-storages==1.13.2
+djangorestframework==3.14.0
+Jinja2==3.1.2
+python-slugify==8.0.1
