--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,11 @@ jobs:
     # The python orb's install-packages step will install the dependencies from a Pipfile via Pipenv by default.
     steps:
       - checkout
+      - run:
+          name: upgrade pip
+          command: |
+            pip install --upgrade pip
+
       - python/install-packages:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
@@ -21,7 +26,11 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: python manage.py test
+          command: |
+            python manage.py test
+
+      - store_test_results: 
+          path: /test.txt
 
       - run:
           name: collect staticfiles 
