--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ version: 2.1
 #   python: circleci/python@1.5.0
 
 # Define a job to be invoked later in a workflow.
-
 jobs:
   build-and-test: 
     docker:
@@ -19,14 +18,15 @@ jobs:
           command: |
             pip install --upgrade pip
 
-      - python/install-packages:
-          pkg-manager: pip
-          # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
-          pip-dependency-file: requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
+      # - python/install-packages:
+      #     pkg-manager: pip
+      #     # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
+      #     pip-dependency-file: requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: |
+            pip install -r requirements.txt
             python manage.py churchweb/test
 
       - store_test_results: 
